cmake_minimum_required(VERSION 3.0.0)
project(CodeCollection VERSION 0.1.0)

# add_subdirectory(eigen_usage)

# add_subdirectory(inheritance)

# add_subdirectory(move_semantics)

# add_subdirectory(templates)

# add_subdirectory(cpp-forward)

# add_subdirectory(type_conversions)

add_subdirectory(smart_pointers)