cmake_minimum_required(VERSION 3.0.0)
project(MoveSemantics VERSION 0.1.0)

add_compile_options(-std=c++11 -O0)

add_executable(move_semantics_example1 example1.cpp)
add_executable(move_semantics_example2 example2.cpp)
add_executable(move_semantics_example3 example3.cpp)
add_executable(move_semantics_example4 example4.cpp)
add_executable(move_semantics_example5 example5.cpp)
add_executable(move_semantics_example6 example6.cpp)
add_executable(move_semantics_example7 example7.cpp)