cmake_minimum_required(VERSION 3.0.0)
project(TypeConversion VERSION 0.1.0)

add_compile_options(-std=c++11 -O0)

add_executable(type_conversion_example1 example1.cpp)
add_executable(type_conversion_example2 example2.cpp)
add_executable(type_conversion_example3 example3.cpp)
add_executable(type_conversion_example4 example4.cpp)
add_executable(type_conversion_example5 example5.cpp)