cmake_minimum_required(VERSION 3.0.0)
project(Inheritance VERSION 0.1.0)

add_executable(inheritance_example1 example1.cpp)
add_executable(inheritance_example2 example2.cpp)
add_executable(inheritance_example3 example3.cpp)
add_executable(inheritance_example4 example4.cpp)
add_executable(inheritance_example5 example5.cpp)