cmake_minimum_required(VERSION 3.0.0)
project(SmartPointers VERSION 0.1.0)

add_executable(smart_pointers_example1 example1.cpp)
add_executable(smart_pointers_example2 example2.cpp)
add_executable(smart_pointers_example3 example3.cpp)
add_executable(smart_pointers_example4 example4.cpp)
add_executable(smart_pointers_example5 example5.cpp)
add_executable(smart_pointers_example6 example6.cpp)