cmake_minimum_required(VERSION 3.0.0)
project(FunctionTemplates VERSION 0.1.0)

add_executable(function_template_example1 example1.cpp)
add_executable(function_template_example2 example2.cpp)
add_executable(function_template_example3 example3.cpp)
add_executable(function_template_example4 example4.cpp)
add_executable(function_template_example5 example5.cpp)